--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Photogram Final</title>
+    <title>Photogram</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <nav>
+      <div>
+        <%= link_to "Photogram", root_path %>
+        
+        <% if user_signed_in? %>
+          <%= link_to "Feed", feed_users_path %>
+          <%= link_to "Discover", discover_users_path %>
+          <%= link_to "Liked", liked_users_path %>
+          <%= link_to "Users", users_path %>
+          <%= link_to "Add Photo", new_photo_path %>
+          <%= link_to "My Profile", user_path(current_user) %>
+          <%= link_to "Edit Profile", edit_user_registration_path %>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "Sign In", new_user_session_path %>
+          <%= link_to "Sign Up", new_user_registration_path %>
+        <% end %>
+      </div>
+    </nav>
+    
+    <% if notice.present? %>
+      <div class="alert alert-success">
+        <%= notice %>
+      </div>
+    <% end %>
+    
+    <% if alert.present? %>
+      <div class="alert alert-danger">
+        <%= alert %>
+      </div>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
