--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
           <%= link_to "Add Photo", new_photo_path %>
           <%= link_to "My Profile", user_path(current_user) %>
           <%= link_to "Edit Profile", edit_user_registration_path %>
-          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+          <%= button_to "Sign Out", destroy_user_session_path, method: :delete %>
         <% else %>
           <%= link_to "Sign In", new_user_session_path %>
           <%= link_to "Sign Up", new_user_registration_path %>
