--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Upload Photo", class: "btn btn-primary" %>
+    <%= form.submit "Add photo", class: "btn btn-primary" %>
     <%= link_to "Cancel", photos_path, class: "btn btn-secondary" %>
   </div>
 <% end %> 
