--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -4,7 +4,8 @@
     <% if current_user == @photo.owner %>
       <div class="actions">
         <%= link_to "Edit", edit_photo_path(@photo), class: "btn btn-sm btn-secondary" %>
-        <%= link_to "Delete", photo_path(@photo), method: :delete, data: { confirm: "Are you sure you want to delete this photo?" }, class: "btn btn-sm btn-danger" %>
+        <%= link_to "Delete this photo", photo_path(@photo), method: :delete, data: { confirm: "Are you sure you want to delete this photo?" }, class: "btn btn-sm btn-danger" %>
+        <%= button_to "Delete this photo", photo_path(@photo), method: :delete, data: { confirm: "Are you sure you want to delete this photo?" }, class: "btn btn-sm btn-danger" %>
       </div>
     <% end %>
   </div>
@@ -21,6 +22,21 @@
     <p><strong>Caption:</strong> <%= @photo.caption %></p>
     <p><strong>Posted:</strong> <%= time_ago_in_words(@photo.created_at) %> ago</p>
   </div>
+  
+  <% if current_user == @photo.owner %>
+    <div class="update-photo-form">
+      <h3>Update photo</h3>
+      <%= form_with(model: @photo, local: true) do |form| %>
+        <div class="form-group">
+          <%= form.label :caption %>
+          <%= form.text_area :caption, class: "form-control" %>
+        </div>
+        <div class="actions">
+          <%= form.submit "Update Photo", class: "btn btn-primary" %>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
   
   <div class="photo-actions">
     <% if user_signed_in? %>
