--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,17 +19,17 @@
           <%= link_to "Feed", feed_users_path %>
           <%= link_to "Discover", discover_users_path %>
           <%= link_to "Liked", liked_users_path %>
-          <%= link_to "Users", users_path %>
-          <%= link_to "Photos", photos_path %>
+          <%= link_to "All users", users_path %>
+          <%= link_to "All public photos", photos_path %>
           <%= link_to "Add Photo", new_photo_path %>
           <%= link_to "My Profile", user_path(current_user) %>
           <%= link_to "Edit Profile", edit_user_registration_path %>
-          <%= button_to "Sign Out", destroy_user_session_path, method: :delete %>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
         <% else %>
-          <%= link_to "Users", users_path %>
-          <%= link_to "Photos", photos_path %>
-          <%= link_to "Sign In", new_user_session_path %>
-          <%= link_to "Sign Up", new_user_registration_path %>
+          <%= link_to "All users", users_path %>
+          <%= link_to "All public photos", photos_path %>
+          <%= link_to "Sign in", new_user_session_path %>
+          <%= link_to "Sign up", new_user_registration_path %>
         <% end %>
       </div>
     </nav>
