--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="user-profile">
   <div class="profile-header">
     <h1><%= @user.username %></h1>
-    <p>Private: <%= @user.private? ? "Yes" : "No" %></p>
+    <p>Private: <%= @user.private? %></p>
     
     <% if user_signed_in? && current_user != @user %>
       <div class="follow-actions">
@@ -56,7 +56,7 @@
     </div>
   <% else %>
     <div class="user-photos">
-      <h2>Photos</h2>
+      <h2>Photos (<%= @user.photos.count %>)</h2>
       <% if @photos.any? %>
         <div class="row">
           <% @photos.each do |photo| %>
@@ -72,8 +72,9 @@
                 <div class="card-body">
                   <p class="card-text"><%= photo.caption %></p>
                   <div class="photo-stats">
-                    <span><i class="fa fa-heart"></i> <%= photo.likes.count %></span>
-                    <span><i class="fa fa-comment"></i> <%= photo.comments.count %></span>
+                    <span><i class="fa fa-heart"></i> <%= photo.likes.count %> likes</span>
+                    <span><i class="fa fa-comment"></i> <%= photo.comments.count %> comments</span>
+                    <p><small class="text-muted">Posted <%= time_ago_in_words(photo.created_at) %> ago</small></p>
                   </div>
                 </div>
               </div>
