--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -32,7 +32,26 @@
 </div>
 
 <% if user_signed_in? %>
+  <div class="new-photo-form">
+    <h2>Add a New Photo</h2>
+    <%= form_with(model: Photo.new, local: true, html: { multipart: true }) do |form| %>
+      <div class="form-group">
+        <%= form.label :image %>
+        <%= form.file_field :image, class: "form-control", required: true %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :caption %>
+        <%= form.text_area :caption, class: "form-control" %>
+      </div>
+
+      <div class="actions">
+        <%= form.submit "Add photo", class: "btn btn-primary" %>
+      </div>
+    <% end %>
+  </div>
+<% else %>
   <div class="actions">
-    <%= link_to "Add New Photo", new_photo_path, class: "btn btn-primary" %>
+    <%= link_to "Sign in to add photos", new_user_session_path, class: "btn btn-primary" %>
   </div>
 <% end %> 
