--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -4,7 +4,6 @@
     <% if current_user == @photo.owner %>
       <div class="actions">
         <%= link_to "Edit", edit_photo_path(@photo), class: "btn btn-sm btn-secondary" %>
-        <%= link_to "Delete this photo", photo_path(@photo), method: :delete, data: { confirm: "Are you sure you want to delete this photo?" }, class: "btn btn-sm btn-danger" %>
         <%= button_to "Delete this photo", photo_path(@photo), method: :delete, data: { confirm: "Are you sure you want to delete this photo?" }, class: "btn btn-sm btn-danger" %>
       </div>
     <% end %>
@@ -32,7 +31,7 @@
           <%= form.text_area :caption, class: "form-control" %>
         </div>
         <div class="actions">
-          <%= form.submit "Update Photo", class: "btn btn-primary" %>
+          <%= form.submit "Update photo", class: "btn btn-primary" %>
         </div>
       <% end %>
     </div>
@@ -41,7 +40,7 @@
   <div class="photo-actions">
     <% if user_signed_in? %>
       <% if @photo.liked_by?(current_user) %>
-        <%= link_to "Unlike", like_path(@photo.like_by(current_user)), method: :delete, class: "btn btn-sm btn-danger" %>
+        <%= button_to "Unlike", like_path(@photo.like_by(current_user)), method: :delete, class: "btn btn-sm btn-danger" %>
       <% else %>
         <%= form_with(model: Like.new, local: true) do |form| %>
           <%= form.hidden_field :photo_id, value: @photo.id %>
@@ -77,7 +76,7 @@
               <strong><%= link_to comment.author.username, user_path(comment.author) %></strong>
               <small><%= time_ago_in_words(comment.created_at) %> ago</small>
               <% if current_user == comment.author %>
-                <%= link_to "Delete", comment_path(comment), method: :delete, data: { confirm: "Are you sure you want to delete this comment?" }, class: "btn btn-sm btn-danger" %>
+                <%= button_to "Delete", comment_path(comment), method: :delete, data: { confirm: "Are you sure you want to delete this comment?" }, class: "btn btn-sm btn-danger" %>
               <% end %>
             </div>
             <div class="comment-body">
