--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,10 +27,10 @@
               <td>
                 <% if current_user.following.include?(user) %>
                   <% follow_request = current_user.sent_follow_requests.find_by(recipient: user) %>
-                  <%= link_to "Unfollow", follow_request_path(follow_request), method: :delete, class: "btn btn-sm btn-danger" %>
+                  <%= button_to "Unfollow", follow_request_path(follow_request), method: :delete, class: "btn btn-sm btn-danger" %>
                 <% elsif current_user.sent_follow_requests.pending.exists?(recipient: user) %>
                   <span>Request sent</span>
-                  <%= link_to "Cancel", follow_request_path(current_user.sent_follow_requests.find_by(recipient: user)), method: :delete %>
+                  <%= button_to "Cancel", follow_request_path(current_user.sent_follow_requests.find_by(recipient: user)), method: :delete, class: "btn btn-sm btn-secondary" %>
                 <% else %>
                   <%= form_with(model: FollowRequest.new, local: true) do |form| %>
                     <%= form.hidden_field :recipient_id, value: user.id %>
