--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <div class="photos-container">
-  <% if @photos.any? %>
+  <% if @photos && @photos.any? %>
     <div class="row">
       <% @photos.each do |photo| %>
         <div class="col-md-4 mb-4">
