--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -46,7 +46,7 @@
       </div>
 
       <div class="actions">
-        <%= form.submit "Add photo", class: "btn btn-primary" %>
+        <button type="submit" class="btn btn-primary">Add photo</button>
       </div>
     <% end %>
   </div>
