--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <%= link_to "Photogram", root_path %>
         
         <% if user_signed_in? %>
+          <span>Signed in as: <%= current_user.username %></span>
           <%= link_to "Feed", feed_users_path %>
           <%= link_to "Discover", discover_users_path %>
           <%= link_to "Liked", liked_users_path %>
