--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -10,9 +10,7 @@
   </div>
   
   <div class="photo-image">
-    <% if defined?(@photo.image.url) && @photo.image.url %>
-      <%= image_tag @photo.image.url, class: "img-fluid" %>
-    <% elsif defined?(@photo.image.attached?) && @photo.image.attached? %>
+    <% if @photo.image.attached? %>
       <%= image_tag @photo.image, class: "img-fluid" %>
     <% else %>
       <p>No image attached</p>
