--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -4,7 +4,7 @@
     <% if current_user == @photo.owner %>
       <div class="actions">
         <%= link_to "Edit", edit_photo_path(@photo), class: "btn btn-sm btn-secondary" %>
-        <%= button_to "Delete this photo", photo_path(@photo), method: :delete, data: { confirm: "Are you sure you want to delete this photo?" }, class: "btn btn-sm btn-danger" %>
+        <%= link_to "Delete this photo", photo_path(@photo), method: :delete, data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this photo?" }, class: "btn btn-sm btn-danger" %>
       </div>
     <% end %>
   </div>
