--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,11 +9,11 @@
       <div class="follow-actions">
         <% if current_user.following.include?(@user) %>
           <% follow_request = current_user.sent_follow_requests.find_by(recipient: @user) %>
-          <%= button_to "Unfollow", follow_request_path(follow_request), method: :delete, class: "btn btn-sm btn-danger" %>
+          <%= link_to "Unfollow", follow_request_path(follow_request), method: :delete, data: { turbo_method: :delete }, class: "btn btn-sm btn-danger" %>
         <% else %>
           <%= form_with(model: FollowRequest.new, local: true) do |form| %>
             <%= form.hidden_field :recipient_id, value: @user.id %>
-            <%= form.submit "Follow", class: "btn btn-sm btn-primary" %>
+            <button type="submit" class="btn btn-sm btn-primary">Follow</button>
           <% end %>
         <% end %>
       </div>
